# realestate-scraper

./: .env.example  .gitignore  Dockerfile  README.md  config.py  debug_strona_1.html  debug_strona_2.html  komendy.txt  log.py  pipeliney.txt  pipeliney_final.txt  pyproject.toml  requirements.txt
data/: scrapper_milestone1.xlsx
data/mierzalnosc_final/: mierzalnosc_excel.py  offers_debug.jsonl  offers_debug2.jsonl  raport_mierzalnosc.xlsx  raport_mierzalnosc1.xlsx
data/mierzalnosc_final/gratka/: offers.csv  urls.csv
data/mierzalnosc_final/morizon/: offers.csv  urls.csv
data/mierzalnosc_final/otodom/: offers.csv  urls.csv
data/mierzalnosc_final/trojmiasto/: offers.csv  urls.csv
data/tests_21_11/gratka/: offers_gratka_21_11.csv  photos_gratka_21_11.csv  urls_gratka_21_11.csv
data/tests_21_11/morizon/: offers_morizon_21_11.csv  photos_morizon_21_11.csv  urls_morizon_21_11.csv
data/tests_21_11/otodom/: offers_otodom_21_11.csv  photos_otodom_21_11.csv  urls_otodom_21_11.csv
scrapper/: cli.py  config.py  delete_wrong_offers.py
scrapper/adapters/: base.py  gratka.py  morizon.py  otodom.py  trojmiasto.py
scrapper/core/: backend.py  dedup.py  http.py  images.py  log.py  parse.py  storage.py  validate.py
scrapper/database_corrections/: cities_rename.py  delete_cheap_offers.py  delete_wrong_offers.py  miasta_z_polskimi_znakami_normalized2.csv  teryt_potwierdzone.csv
scrapper/pipelines/: detail.py  discover.py  photos.py  run.py  stream.py
scrapper/tests/: test_images.py  test_otodom_selectors.py  verify_one_otodom.py
(+3 files in other folders)
